--- a/client/src/activiteitDetail/index.html
+++ b/client/src/activiteitDetail/index.html
@@ -46,104 +46,75 @@
             <main>
                 <section class="banner">
                     <div>
-                        <h1>Welkom</h1>
-                        <h2>Bij onze zorgzame buurt</h2>
+                        <h1 id="activiteitNaam">Lopen</h1>
+                        <p id="beschrijving">
+                            Kom samen lopen met ons in het bos
+                        </p>
                     </div>
                 </section>
-
-                <section class="activiteiten">
-                    <h2>Activiteiten:</h2>
-                    <ul>
-                        <li>
-                            <h3>Piano lessen</h3>
-                            <p>
-                                Leer piano spelen met ondersteuning van een paar
-                                professionele piano leraren
-                            </p>
-                            <div>
-                                <p>
-                                    aantal mensen:
-                                    <span id="aantalMensen">3</span>/<span
-                                        id="maxMensen"
-                                        >20</span
-                                    >
-                                </p>
-                                <p>€<span id="prijs">5</span></p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <h3>Lopen</h3>
-                            <p>
-                                Leer piano spelen met ondersteuning van een paar
-                                professionele piano leraren
-                            </p>
-                            <div>
-                                <p>
-                                    aantal mensen:
-                                    <span id="aantalMensen">3</span>/<span
-                                        id="maxMensen"
-                                        >20</span
-                                    >
-                                </p>
-                                <p>€<span id="prijs">5</span></p>
-                            </div>
-                        </li>
-                    </ul>
-                    <a href="">Zie meer</a>
-                </section>
-
+                <h2 class="hidden">Info</h2>
                 <section>
-                    <h2>Leer ons kennen</h2>
-                    <ul>
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
+                    <div class="kaart">
+                        <h3>Locatie:</h3>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2504.8568121214234!2d3.70127097668418!3d51.111101971725944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c37085fd32190f%3A0x3b60d198878014e6!2sHoeksken%2074%2C%209940%20Evergem!5e0!3m2!1sen!2sbe!4v1717364552856!5m2!1sen!2sbe"
+                            style="border: 0"
+                            allowfullscreen=""
+                            loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"
+                        ></iframe>
+                    </div>
+                    <div class="organisatoren">
+                        <h3>Organisatoren:</h3>
+                        <ul>
+                            <li class="profilepicture">
+                                <h3>Tom</h3>
+                                <img
+                                    src="https://picsum.photos/100/100"
+                                    alt="Profielfoto"
+                                />
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="tijdstip">
+                        <h3>tijdstip:</h3>
+                        <ul>
+                            <li id="dag">3/6/2024</li>
+                            <li id="uur">10:30</li>
+                        </ul>
+                    </div>
+                    <div class="prijs">
+                        <h3>prijs: €<span id="prijs">3</span></h3>
+                    </div>
 
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
+                    <div class="deelnemers">
+                        <h3>Mensen die komen:</h3>
+                        <ul>
+                            <li class="profilepicture">
+                                <h3>Tom</h3>
+                                <img
+                                    src="https://picsum.photos/100/100"
+                                    alt="Profielfoto"
+                                />
+                            </li>
+                            <li class="profilepicture">
+                                <h3>Tom</h3>
+                                <img
+                                    src="https://picsum.photos/100/100"
+                                    alt="Profielfoto"
+                                />
+                            </li>
+                            <li class="profilepicture">
+                                <h3>Tom</h3>
+                                <img
+                                    src="https://picsum.photos/100/100"
+                                    alt="Profielfoto"
+                                />
+                            </li>
+                        </ul>
+                    </div>
 
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
-
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
-
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
-
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
-                    </ul>
+                    <button class="button">Schrijf je in</button>
                 </section>
             </main>
 
