--- a/client/src/activiteiten/index.html
+++ b/client/src/activiteiten/index.html
@@ -52,7 +52,9 @@
                     <div>
                         <h1>Plan nu zelf</h1>
                         <h2>Organiseer je eigen activiteit en help de buurt</h2>
-                        <a class="button">Klik hier om te beginnen organiseren</a>
+                        <a class="button"
+                            >Klik hier om te beginnen organiseren</a
+                        >
                     </div>
                 </section>
 
