--- a/client/src/landingspagina/index.html
+++ b/client/src/landingspagina/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta
-            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+            content="width=device-width, initial-scale=1.0"
             name="viewport"
         />
         <meta content="ie=edge" http-equiv="X-UA-Compatible" />
@@ -23,120 +23,13 @@
     </head>
     <body>
         <div class="container">
-            <header>
-                
-            </header>
+            <header></header>
 
             <main>
-                <section class="banner">
-                    <div>
-                        <h1>Welkom</h1>
-                        <h2>Bij onze zorgzame buurt</h2>
-                    </div>
-                </section>
-
-                <section class="activiteiten">
-                    <h2>Activiteiten:</h2>
-                    <ul>
-                        <li>
-                            <h3>Piano lessen</h3>
-                            <p>
-                                Leer piano spelen met ondersteuning van een paar
-                                professionele piano leraren
-                            </p>
-                            <div>
-                                <p>
-                                    aantal mensen:
-                                    <span id="aantalMensen">3</span>/<span
-                                        id="maxMensen"
-                                        >20</span
-                                    >
-                                </p>
-                                <p>€<span id="prijs">5</span></p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <h3>Lopen</h3>
-                            <p>
-                                Leer piano spelen met ondersteuning van een paar
-                                professionele piano leraren
-                            </p>
-                            <div>
-                                <p>
-                                    aantal mensen:
-                                    <span id="aantalMensen">3</span>/<span
-                                        id="maxMensen"
-                                        >20</span
-                                    >
-                                </p>
-                                <p>€<span id="prijs">5</span></p>
-                            </div>
-                        </li>
-                    </ul>
-                    <a href="">Zie meer</a>
-                </section>
-
-                <section>
-                    <h2>Leer ons kennen</h2>
-                    <ul>
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
-
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
-
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
-
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
-
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
-
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
-                    </ul>
-                </section>
+                <h1 class="logo">Neighbourhoods</h1>
             </main>
 
             <footer>
-                <h2>contacteer ons</h2>
-                <ul>
-                    <li>art.vandervennet@student.odisee.be</li>
-                    <li>artvandervennet.ikdoeict.be</li>
-                </ul>
             </footer>
         </div>
     </body>
