--- a/client/src/profielDetail/index.html
+++ b/client/src/profielDetail/index.html
@@ -44,16 +44,55 @@
             </header>
 
             <main>
-                <section class="banner">
-                    <div>
-                        <h1>Welkom</h1>
-                        <h2>Bij onze zorgzame buurt</h2>
-                    </div>
+                <section class="profielfoto">
+                    <h1>Tom</h1>
+
+                    <ul>
+                        <li>
+                            <span
+                                >telefoonnummer:
+                                <span id="telefoonnummer"
+                                    >0479206526</span
+                                ></span
+                            >
+                        </li>
+                        <li>
+                            <span
+                                >email:
+                                <span id="email">tom@gmail.com</span></span
+                            >
+                        </li>
+                    </ul>
+
+                    <figure>
+                        <img
+                            src="https://picsum.photos/100/100"
+                            alt="profielfoto"
+                        />
+                    </figure>
                 </section>
 
                 <section class="activiteiten">
-                    <h2>Activiteiten:</h2>
-                    <ul>
+                    <h2>Georganiseerd:</h2>
+                    <ul class="scrollable">
+                        <li>
+                            <h3>Piano lessen</h3>
+                            <p>
+                                Leer piano spelen met ondersteuning van een paar
+                                professionele piano leraren
+                            </p>
+                            <div>
+                                <p>
+                                    aantal mensen:
+                                    <span id="aantalMensen">3</span>/<span
+                                        id="maxMensen"
+                                        >20</span
+                                    >
+                                </p>
+                                <p>€<span id="prijs">5</span></p>
+                            </div>
+                        </li>
+
                         <li>
                             <h3>Piano lessen</h3>
                             <p>
@@ -90,58 +129,63 @@
                             </div>
                         </li>
                     </ul>
-                    <a href="">Zie meer</a>
                 </section>
 
-                <section>
-                    <h2>Leer ons kennen</h2>
-                    <ul>
+                <section class="activiteiten">
+                    <h2>Ingeschreven:</h2>
+                    <ul class="scrollable">
                         <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
+                            <h3>Piano lessen</h3>
+                            <p>
+                                Leer piano spelen met ondersteuning van een paar
+                                professionele piano leraren
+                            </p>
+                            <div>
+                                <p>
+                                    aantal mensen:
+                                    <span id="aantalMensen">3</span>/<span
+                                        id="maxMensen"
+                                        >20</span
+                                    >
+                                </p>
+                                <p>€<span id="prijs">5</span></p>
+                            </div>
                         </li>
 
                         <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
+                            <h3>Piano lessen</h3>
+                            <p>
+                                Leer piano spelen met ondersteuning van een paar
+                                professionele piano leraren
+                            </p>
+                            <div>
+                                <p>
+                                    aantal mensen:
+                                    <span id="aantalMensen">3</span>/<span
+                                        id="maxMensen"
+                                        >20</span
+                                    >
+                                </p>
+                                <p>€<span id="prijs">5</span></p>
+                            </div>
                         </li>
 
                         <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
-
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
-
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
-
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
+                            <h3>Lopen</h3>
+                            <p>
+                                Leer piano spelen met ondersteuning van een paar
+                                professionele piano leraren
+                            </p>
+                            <div>
+                                <p>
+                                    aantal mensen:
+                                    <span id="aantalMensen">3</span>/<span
+                                        id="maxMensen"
+                                        >20</span
+                                    >
+                                </p>
+                                <p>€<span id="prijs">5</span></p>
+                            </div>
                         </li>
                     </ul>
                 </section>
