--- a/client/src/activiteitMaken/index.html
+++ b/client/src/activiteitMaken/index.html
@@ -46,105 +46,125 @@
             <main>
                 <section class="banner">
                     <div>
-                        <h1>Welkom</h1>
-                        <h2>Bij onze zorgzame buurt</h2>
+                        <h1>Organiseer</h1>
+                        <p>jouw eigen activiteit</p>
                     </div>
                 </section>
 
-                <section class="activiteiten">
-                    <h2>Activiteiten:</h2>
-                    <ul>
-                        <li>
-                            <h3>Piano lessen</h3>
-                            <p>
-                                Leer piano spelen met ondersteuning van een paar
-                                professionele piano leraren
-                            </p>
-                            <div>
-                                <p>
-                                    aantal mensen:
-                                    <span id="aantalMensen">3</span>/<span
-                                        id="maxMensen"
-                                        >20</span
-                                    >
-                                </p>
-                                <p>€<span id="prijs">5</span></p>
-                            </div>
-                        </li>
+                <form action="" id="activiteitMaken">
+                    <div
+                        class="errorSummary"
+                        role="group"
+                        aria-labelledby="errorSummary-heading"
+                        tabindex="-1"
+                    >
+                        <h2 id="errorSummary-heading">Er is een probleem</h2>
+                        <ul></ul>
+                    </div>
 
-                        <li>
-                            <h3>Lopen</h3>
-                            <p>
-                                Leer piano spelen met ondersteuning van een paar
-                                professionele piano leraren
-                            </p>
-                            <div>
-                                <p>
-                                    aantal mensen:
-                                    <span id="aantalMensen">3</span>/<span
-                                        id="maxMensen"
-                                        >20</span
-                                    >
-                                </p>
-                                <p>€<span id="prijs">5</span></p>
-                            </div>
-                        </li>
-                    </ul>
-                    <a href="">Zie meer</a>
-                </section>
+                    <div>
+                        <label for="naam">
+                            <span class="field-label"
+                                >Naam van de activiteit:</span
+                            >
+                        </label>
+                        <input
+                            type="text"
+                            name="naam"
+                            id="naam"
+                            autocomplete=""
+                            required
+                            autofocus
+                            tabindex="0"
+                        />
+                    </div>
 
-                <section>
-                    <h2>Leer ons kennen</h2>
-                    <ul>
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
+                    <div>
+                        <label for="beschrijving">
+                            <span class="field-label">Beschrijving:</span>
+                        </label>
+                        <input
+                            type="text"
+                            name="beschrijving"
+                            id="beschrijving"
+                            autocomplete=""
+                            required
+                        />
+                    </div>
 
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
+                    <div>
+                        <label for="medeOrganisatoren">
+                            <span class="field-label">Mede organisatoren:</span
+                            ><span class="field-hint">(optioneel)</span>
+                        </label>
+                        <input
+                            type="search"
+                            name="medeOrganisatoren"
+                            id="medeOrganisatoren"
+                            autocomplete=""
+                            required
+                        />
+                    </div>
 
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
+                    <div>
+                        <label for="prijs">
+                            <span class="field-label">Prijs:</span>
+                        </label>
+                        <input
+                            type="number"
+                            name="prijs"
+                            id="prijs"
+                            autocomplete=""
+                            required
+                        />
+                    </div>
 
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
+                    <div>
+                        <label for="plaats">
+                            <span class="field-label">Plaats:</span>
+                        </label>
+                        <input
+                            type="text"
+                            name="plaats"
+                            id="plaats"
+                            autocomplete=""
+                            required
+                        />
+                    </div>
 
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
+                    <div>
+                        <label for="datum">
+                            <span class="field-label">Datum en tijdstip:</span>
+                        </label>
+                        <input
+                            type="datetime-local"
+                            id="datum"
+                            name="datum"
+                            autocomplete=""
+                            required
+                        />
+                    </div>
 
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
-                    </ul>
-                </section>
+                    <div>
+                        <label for="maxMensen">
+                            <span class="field-label">Max mensen:</span>
+                            <span class="field-hint"
+                                >laat dit leeg voor opbeperkt</span
+                            >
+                        </label>
+                        <input
+                            type="number"
+                            id="maxMensen"
+                            name="maxMensen"
+                            autocomplete=""
+                            required
+                        />
+                    </div>
+
+                    <div>
+                        <button class="button" type="submit">Maak activiteit aan</button>
+                    </div>
+                </form>
             </main>
 
             <footer>
