--- a/client/src/bewoners/index.html
+++ b/client/src/bewoners/index.html
@@ -36,7 +36,11 @@
                         <ul>
                             <li><a href="../">Home</a></li>
                             <li><a href="../activiteiten/">Activiteiten</a></li>
-                            <li><a class="active" href="../bewoners/">Bewoners</a></li>
+                            <li>
+                                <a class="active" href="../bewoners/"
+                                    >Bewoners</a
+                                >
+                            </li>
                             <li><a href="../profiel/">Profiel</a></li>
                         </ul>
                     </nav>
@@ -47,7 +51,9 @@
                 <section class="banner">
                     <div>
                         <h1>Welkom</h1>
-                        <h2>Maak nu een account en voeg je toe aan onze buurt </h2>
+                        <h2>
+                            Maak nu een account en voeg je toe aan onze buurt
+                        </h2>
                         <a class="button">Klik hier om je in te loggen</a>
                     </div>
                 </section>
@@ -57,32 +63,50 @@
                     <ul>
                         <li class="profilepicture">
                             <h3>Tom</h3>
-                            <img src="https://picsum.photos/100/100" alt="Profielfoto">
+                            <img
+                                src="https://picsum.photos/100/100"
+                                alt="Profielfoto"
+                            />
                         </li>
 
                         <li class="profilepicture">
                             <h3>Tom</h3>
-                            <img src="https://picsum.photos/100/100" alt="Profielfoto">
-                        </li >
+                            <img
+                                src="https://picsum.photos/100/100"
+                                alt="Profielfoto"
+                            />
+                        </li>
 
                         <li class="profilepicture">
                             <h3>Tom</h3>
-                            <img src="https://picsum.photos/100/100" alt="Profielfoto">
-                        </li >
+                            <img
+                                src="https://picsum.photos/100/100"
+                                alt="Profielfoto"
+                            />
+                        </li>
 
                         <li class="profilepicture">
                             <h3>Tom</h3>
-                            <img src="https://picsum.photos/100/100" alt="Profielfoto">
-                        </li >
+                            <img
+                                src="https://picsum.photos/100/100"
+                                alt="Profielfoto"
+                            />
+                        </li>
 
                         <li class="profilepicture">
                             <h3>Tom</h3>
-                            <img src="https://picsum.photos/100/100" alt="Profielfoto">
-                        </li >
+                            <img
+                                src="https://picsum.photos/100/100"
+                                alt="Profielfoto"
+                            />
+                        </li>
 
                         <li class="profilepicture">
                             <h3>Tom</h3>
-                            <img src="https://picsum.photos/100/100" alt="Profielfoto">
+                            <img
+                                src="https://picsum.photos/100/100"
+                                alt="Profielfoto"
+                            />
                         </li>
                     </ul>
                 </section>
