--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta
-            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+            content="width=device-width, initial-scale=1.0"
             name="viewport"
         />
         <meta content="ie=edge" http-equiv="X-UA-Compatible" />
@@ -25,6 +25,7 @@
     <body>
         <div class="container">
             <header>
+                <a href="#banner" class="hidden">skiplink</a>
                 <div class="content">
                     <a class="logo" href="">Neighbourhoods</a>
                     <button aria-expanded="false" class="hamburger" id="menu">
