--- a/client/src/login/index.html
+++ b/client/src/login/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta
-            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+            content="width=device-width, initial-scale=1.0"
             name="viewport"
         />
         <meta content="ie=edge" http-equiv="X-UA-Compatible" />
@@ -18,8 +18,7 @@
             href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,300;0,400;0,700;1,400;1,700&display=swap"
             rel="stylesheet"
         />
-        <script type="module" src="../js/main.js"></script>
-        <title>Neighbourhoods</title>
+        <title>Login</title>
     </head>
     <body>
         <div class="container">
