--- a/client/src/activiteiten/index.html
+++ b/client/src/activiteiten/index.html
@@ -18,12 +18,13 @@
             href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,300;0,400;0,700;1,400;1,700&display=swap"
             rel="stylesheet"
         />
-        <script type="module" src="../js/main.js"></script>
+        <script type="module" src="../js/header.js"></script>
         <title>Activiteiten</title>
     </head>
     <body>
         <div class="container">
             <header>
+                <a href="#banner" class="hidden">skiplink</a>
                 <div class="content">
                     <a class="logo" href="">Neighbourhoods</a>
                     <button aria-expanded="false" class="hamburger" id="menu">
@@ -34,12 +35,8 @@
                     </button>
                     <nav>
                         <ul>
-                            <li><a href="../">Home</a></li>
-                            <li>
-                                <a class="active" href="../activiteiten/"
-                                    >Activiteiten</a
-                                >
-                            </li>
+                            <li><a href="../home/">Home</a></li>
+                            <li><a href="../activiteiten/">Activiteiten</a></li>
                             <li><a href="../bewoners/">Bewoners</a></li>
                             <li><a href="../profiel/">Profiel</a></li>
                         </ul>
@@ -52,7 +49,7 @@
                     <div>
                         <h1>Plan nu zelf</h1>
                         <h2>Organiseer je eigen activiteit en help de buurt</h2>
-                        <a class="button"
+                        <a class="button" href="../activiteitMaken/"
                             >Klik hier om te beginnen organiseren</a
                         >
                     </div>
