--- a/client/src/bewoners/index.html
+++ b/client/src/bewoners/index.html
@@ -2,10 +2,7 @@
 <html lang="nl">
     <head>
         <meta charset="UTF-8" />
-        <meta
-            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-            name="viewport"
-        />
+        <meta content="width=device-width, initial-scale=1.0" name="viewport" />
         <meta content="ie=edge" http-equiv="X-UA-Compatible" />
         <link
             href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
@@ -18,12 +15,13 @@
             href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,300;0,400;0,700;1,400;1,700&display=swap"
             rel="stylesheet"
         />
-        <script type="module" src="../js/main.js"></script>
-        <title>Neighbourhoods</title>
+        <script type="module" src="../js/header.js"></script>
+        <title>Bewoners</title>
     </head>
     <body>
         <div class="container">
             <header>
+                <a href="#banner" class="hidden">skiplink</a>
                 <div class="content">
                     <a class="logo" href="">Neighbourhoods</a>
                     <button aria-expanded="false" class="hamburger" id="menu">
@@ -34,13 +32,9 @@
                     </button>
                     <nav>
                         <ul>
-                            <li><a href="../">Home</a></li>
+                            <li><a href="../home/">Home</a></li>
                             <li><a href="../activiteiten/">Activiteiten</a></li>
-                            <li>
-                                <a class="active" href="../bewoners/"
-                                    >Bewoners</a
-                                >
-                            </li>
+                            <li><a href="../bewoners/">Bewoners</a></li>
                             <li><a href="../profiel/">Profiel</a></li>
                         </ul>
                     </nav>
@@ -54,7 +48,9 @@
                         <h2>
                             Maak nu een account en voeg je toe aan onze buurt
                         </h2>
-                        <a class="button">Klik hier om je in te loggen</a>
+                        <a class="button" href="../login/"
+                            >Klik hier om je in te loggen</a
+                        >
                     </div>
                 </section>
 
